--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@
                                     ></i>
                                     <input
                                         id="sign-in-email"
-                                        type="email"
+                                        type="text"
                                         class="account-form__input"
                                         placeholder="Email của bạn"
                                         required
