--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
                             >
                                 <i class="fa-solid fa-magnifying-glass"></i>
                             </div>
+                            <li class="header__navbar-item">
+                                <a
+                                href="index.html?advSearch"
+                                class="header__navbar-item-link"
+                                >Tìm kiếm nâng cao</a
+                            >
+                            </li>
 
                             <div class="header__cart" onclick="showCartPage()">
                                 <span
@@ -412,7 +419,38 @@
                     <div id="show-product-detail" class="row"></div>
                 </div>
             </div>
+            <div class="advSearch">
+                <section style="margin: 50px auto; width: 50%; background-color: white; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); border-radius: 8px; padding: 30px; display: flex; flex-direction: column; align-items: center;">
+                    <h2 style="text-align: center; margin: 10px 0 20px;">Tìm kiếm nâng cao</h2>
+                    <form onsubmit="event.preventDefault(); window.location.href='index.html';"  style="width: 100%; display: grid; grid-template-columns: 1fr 3fr; row-gap: 20px; column-gap: 20px; align-items: center;">
+                        <div style="display: contents;">
+                            <label for="name" style="text-align: left; font-size: 16px; font-weight: 500;">Tên sản phẩm</label>
+                            <input type="text" id="name" required style="width: 100%; height: 35px; padding: 5px 10px; font-size: 16px; border: 1px solid rgb(221, 201, 201); border-radius: 5px;">
+                        </div>
+                        <div style="display: contents;">
+                            <label for="brand" style="text-align: left; font-size: 16px; font-weight: 500;">Loại</label>
+                            <select id="brand" style="width: 100%; height: 35px; padding: 5px 10px; font-size: 16px; border: 1px solid rgb(221, 201, 201); border-radius: 5px;">
+                                <option value="iPhone">IPhone</option>
+                                <option value="iPad">IPad</option>
+                                <option value="MacBook">MacBook</option>
+                                <option value="AppleWatch">AppleWatch</option>
 
+                            </select>
+                        </div>
+                        <div style="display: contents;">
+                            <label for="priceFrom" style="text-align: left; font-size: 16px; font-weight: 500;">Giá từ</label>
+                            <div style="display: flex; gap: 10px; align-items: center;">
+                                <input type="number" id="priceFrom" style="width: calc(50% - 5px); height: 35px; padding: 5px 10px; font-size: 16px; border: 1px solid rgb(221, 201, 201); border-radius: 5px;">
+                                <span style="font-size: 16px; color: #333;">đến</span>
+                                <input type="number"  id="priceTo" style="width: calc(50% - 5px); height: 35px; padding: 5px 10px; font-size: 16px; border: 1px solid rgb(221, 201, 201); border-radius: 5px;">
+                            </div>
+                        </div>
+                        <button style="grid-column: span 2; width: 40%; font-size: 18px; margin: 20px auto; padding: 10px 15px; border: 2px solid black; background-color: #000; font-weight: bold; cursor: pointer; border-radius: 5px; color: #fff; text-align: center; transition: transform 0.2s, box-shadow 0.2s;">
+                            Tìm kiếm
+                        </button>
+                    </form>
+                </section>
+            </div>
             <!-- Search empty -->
             <div id="search__empty"></div>
 
@@ -916,6 +954,7 @@
         <script src="./js/search.js"></script>
         <script src="./js/slider.js"></script>
         <script src="./js/cart.js"></script>
+        <script src="./js/advSearch.js"></script>
         <script>
             window.onload = function () {
                 var url = window.location.href;
@@ -928,6 +967,8 @@
                         showCartProduct();
                     } else if (s[1] == "search") {
                         showSearchProduct(1);
+                    } else if (s[1] == "advSearch") {
+                        showAdvSearch();
                     } else {
                         showProduct(1);
                     }
