--- a/admin.html
+++ b/admin.html
@@ -353,7 +353,7 @@
                             <table style="width: 100%;margin: 40px 0;">
                                 <!--noi dung tieu de-->
                                 <tr class="title">
-                                    <th>Mã đơn hàng</th>
+                                    <th>Số thứ tự</th>
                                     <th>Tên Khách Hàng</th>
                                     <th>Địa chỉ</th>
                                     <th>Số Sản Phẩm Đã Mua</th>
@@ -361,35 +361,35 @@
                                 </tr>
                                 <!--noi dung cac san pham-->
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">
-                                    <td style="padding: 15px 0 15px 15px;"><a href="xemSanPhamMua.html">#1</a></td>
+                                    <td style="padding: 15px 0 15px 15px;">1</td>
                                     <td style="padding: 15px 0 15px 15px;">Nguyễn Ân</td>
                                     <td style="padding: 15px 0 15px 15px;">22/22 Dương Bá Trạc Quận 8 tpHCM</td>
                                     <td style="padding: 15px 0 15px 15px;">10</td>
                                     <td style="padding: 15px 0 15px 15px; color: blue; text-decoration: underline;cursor: pointer;" onclick="showDetailBill()">Xem hóa đơn</td>
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">
-                                    <td style="padding: 15px 0 15px 15px;"><a href="xemSanPhamMua.html">#2</a></td>
+                                    <td style="padding: 15px 0 15px 15px;">2</td>
                                     <td style="padding: 15px 0 15px 15px;">Thanh Điền</td>
                                     <td style="padding: 15px 0 15px 15px;">22/22 Dương Bá Trạc Quận 8 tpHCM</td>
                                     <td style="padding: 15px 0 15px 15px;">2</td>
                                     <td style="padding: 15px 0 15px 15px; color: blue; text-decoration: underline;cursor: pointer;" onclick="showDetailBill()">Xem hóa đơn</td>
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">
-                                    <td style="padding: 15px 0 15px 15px;"><a href="xemSanPhamMua.html">#3</a></td>
+                                    <td style="padding: 15px 0 15px 15px;">3</td>
                                     <td style="padding: 15px 0 15px 15px;">Trọng Hiếu</td>
                                     <td style="padding: 15px 0 15px 15px;">22/22 Dương Bá Trạc Quận 8 tpHCM</td>
                                     <td style="padding: 15px 0 15px 15px;">2</td>
                                     <td style="padding: 15px 0 15px 15px; color: blue; text-decoration: underline;cursor: pointer;" onclick="showDetailBill()">Xem hóa đơn</td>
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">
-                                    <td style="padding: 15px 0 15px 15px;"><a href="xemSanPhamMua.html">#4</a></td>
+                                    <td style="padding: 15px 0 15px 15px;">4</td>
                                     <td style="padding: 15px 0 15px 15px;">Thanh</td>
                                     <td style="padding: 15px 0 15px 15px;">22/22 Dương Bá Trạc Quận 8 tpHCM</td>
                                     <td style="padding: 15px 0 15px 15px;">2</td>
                                     <td style="padding: 15px 0 15px 15px; color: blue; text-decoration: underline;cursor: pointer;" onclick="showDetailBill()">Xem hóa đơn</td>
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">
-                                    <td style="padding: 15px 0 15px 15px;"><a href="xemSanPhamMua.html">#5</a></td>
+                                    <td style="padding: 15px 0 15px 15px;">5</td>
                                     <td style="padding: 15px 0 15px 15px;">Ngọc Hân</td>
                                     <td style="padding: 15px 0 15px 15px;">22/22 Dương Bá Trạc Quận 8 tpHCM</td>
                                     <td style="padding: 15px 0 15px 15px;">2</td>
@@ -424,7 +424,7 @@
                             <table style="width: 100%;margin: 40px 0;">
                                 <!--noi dung tieu de-->
                                 <tr class="title">
-                                    <th>Mã đơn hàng</th>
+                                    <th>Số thứ tự</th>
                                     <th>Tên Khách Hàng</th>
                                     <th>Địa chỉ</th>
                                     <th>Số Sản Phẩm Đã Mua</th>
@@ -434,35 +434,35 @@
                                 </tr>
                                 <!--noi dung cac san pham-->
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">
-                                    <td style="padding: 15px 0 15px 15px;"><a href="xemSanPhamMua.html">#6</a></td>
+                                    <td style="padding: 15px 0 15px 15px;">6</td>
                                     <td style="padding: 15px 0 15px 15px;">Nguyễn Ân</td>
                                     <td style="padding: 15px 0 15px 15px;">22/22 Dương Bá Trạc Quận 8 tpHCM</td>
                                     <td style="padding: 15px 0 15px 15px;">2</td>
                                     <td style="padding: 15px 0 15px 15px; color: blue; text-decoration: underline;cursor: pointer;" onclick="showDetailBill()">Xem hóa đơn</td>
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">
-                                    <td style="padding: 15px 0 15px 15px;"><a href="xemSanPhamMua.html">#7</a></td>
+                                    <td style="padding: 15px 0 15px 15px;">7</td>
                                     <td style="padding: 15px 0 15px 15px;">Thanh Điền</td>
                                     <td style="padding: 15px 0 15px 15px;">22/22 Dương Bá Trạc Quận 8 tpHCM</td>
                                     <td style="padding: 15px 0 15px 15px;">2</td>
                                     <td style="padding: 15px 0 15px 15px; color: blue; text-decoration: underline;cursor: pointer;" onclick="showDetailBill()">Xem hóa đơn</td>
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">
-                                    <td style="padding: 15px 0 15px 15px;"><a href="xemSanPhamMua.html">#8</a></td>
+                                    <td style="padding: 15px 0 15px 15px;">8</td>
                                     <td style="padding: 15px 0 15px 15px;">Trọng Hiếu</td>
                                     <td style="padding: 15px 0 15px 15px;">22/22 Dương Bá Trạc Quận 8 tpHCM</td>
                                     <td style="padding: 15px 0 15px 15px;">2</td>
                                     <td style="padding: 15px 0 15px 15px; color: blue; text-decoration: underline;cursor: pointer;" onclick="showDetailBill()">Xem hóa đơn</td>
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">
-                                    <td style="padding: 15px 0 15px 15px;"><a href="xemSanPhamMua.html">#9</a></td>
+                                    <td style="padding: 15px 0 15px 15px;">9</td>
                                     <td style="padding: 15px 0 15px 15px;">Thanh</td>
                                     <td style="padding: 15px 0 15px 15px;">22/22 Dương Bá Trạc Quận 8 tpHCM</td>
                                     <td style="padding: 15px 0 15px 15px;">2</td>
                                     <td style="padding: 15px 0 15px 15px; color: blue; text-decoration: underline;cursor: pointer;" onclick="showDetailBill()">Xem hóa đơn</td>
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">
-                                    <td style="padding: 15px 0 15px 15px;"><a href="xemSanPhamMua.html">#10</a></td>
+                                    <td style="padding: 15px 0 15px 15px;">10</td>
                                     <td style="padding: 15px 0 15px 15px;">Ngọc Hân</td>
                                     <td style="padding: 15px 0 15px 15px;">22/22 Dương Bá Trạc Quận 8 tpHCM</td>
                                     <td style="padding: 15px 0 15px 15px;">2</td>
@@ -507,35 +507,35 @@
                                 </tr>
                                 <!--noi dung cac san pham-->
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">
-                                    <td style="padding: 15px 0 15px 15px;"><a href="xemSanPhamMua.html">#11</a></td>
+                                    <td style="padding: 15px 0 15px 15px;">11</td>
                                     <td style="padding: 15px 0 15px 15px;">Nguyễn Ân</td>
                                     <td style="padding: 15px 0 15px 15px;">22/22 Dương Bá Trạc Quận 8 tpHCM</td>
                                     <td style="padding: 15px 0 15px 15px;">2</td>
                                     <td style="padding: 15px 0 15px 15px; color: blue; text-decoration: underline;cursor: pointer;" onclick="showDetailBill()">Xem hóa đơn</td>
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">
-                                    <td style="padding: 15px 0 15px 15px;"><a href="xemSanPhamMua.html">#12</a></td>
+                                    <td style="padding: 15px 0 15px 15px;">12</td>
                                     <td style="padding: 15px 0 15px 15px;">Thanh Điền</td>
                                     <td style="padding: 15px 0 15px 15px;">22/22 Dương Bá Trạc Quận 8 tpHCM</td>
                                     <td style="padding: 15px 0 15px 15px;">2</td>
                                     <td style="padding: 15px 0 15px 15px; color: blue; text-decoration: underline;cursor: pointer;" onclick="showDetailBill()">Xem hóa đơn</td>
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">
-                                    <td style="padding: 15px 0 15px 15px;"><a href="xemSanPhamMua.html">#13</a></td>
+                                    <td style="padding: 15px 0 15px 15px;">13</td>
                                     <td style="padding: 15px 0 15px 15px;">Trọng Hiếu</td>
                                     <td style="padding: 15px 0 15px 15px;">22/22 Dương Bá Trạc Quận 8 tpHCM</td>
                                     <td style="padding: 15px 0 15px 15px;">2</td>
                                     <td style="padding: 15px 0 15px 15px; color: blue; text-decoration: underline;cursor: pointer;" onclick="showDetailBill()">Xem hóa đơn</td>
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">
-                                    <td style="padding: 15px 0 15px 15px;"><a href="xemSanPhamMua.html">#14</a></td>
+                                    <td style="padding: 15px 0 15px 15px;">14</td>
                                     <td style="padding: 15px 0 15px 15px;">Thanh</td>
                                     <td style="padding: 15px 0 15px 15px;">22/22 Dương Bá Trạc Quận 8 tpHCM</td>
                                     <td style="padding: 15px 0 15px 15px;">2</td>
                                     <td style="padding: 15px 0 15px 15px; color: blue; text-decoration: underline;cursor: pointer;" onclick="showDetailBill()">Xem hóa đơn</td>
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">
-                                    <td style="padding: 15px 0 15px 15px;"><a href="xemSanPhamMua.html">#15</a></td>
+                                    <td style="padding: 15px 0 15px 15px;">15</td>
                                     <td style="padding: 15px 0 15px 15px;">Ngọc Hân</td>
                                     <td style="padding: 15px 0 15px 15px;">22/22 Dương Bá Trạc Quận 8 tpHCM</td>
                                     <td style="padding: 15px 0 15px 15px;">2</td>
