--- a/admin.html
+++ b/admin.html
@@ -72,26 +72,6 @@
                             <i class="uil uil-chart-line"></i>
                             <span  class="side-bar__item-text">Thống kê khách hàng</span>
                         </li>
-                        <li
-                            class="side-bar__item"
-                            value="order"
-                            onclick="showAdminOrder()"
-                        >
-                            <i class="uil uil-clipboard-notes"></i>
-                            <span class="side-bar__item-text"
-                                >Quản lý đơn hàng</span
-                            >
-                        </li>
-                        <li
-                            class="side-bar__item"
-                            value="bill"
-                            onclick="showDetailBill()"
-                        >
-                            <i class='bx bx-food-menu'></i>
-                            <span class="side-bar__item-text"
-                                >Chi tiết đơn hàng</span
-                            >
-                        </li>
                         
                         <li
                             class="side-bar__item"
@@ -174,6 +154,8 @@
                                     <th>Đơn giá</th>
                                     <th>Tổng tiền</th>
                                     <th>Số lượng bán</th>
+                                    <th>Bán nhanh nhất</th>
+                                    <th>Bán ế nhất</th>
                                     <th>Hóa đơn</th>
                                 </tr>
                                 <tr class="product">
@@ -182,6 +164,8 @@
                                     <td>35.990.000₫</td>
                                     <td>71.980.000đ</td>
                                     <td class="state">2</td>
+                                    <td>✔</td>
+                                    <td></td>
                                     <td style="color: blue; text-decoration: underline;cursor: pointer;" onclick="showAdminOrder()">Xem hóa đơn</td>
                                 </tr>
                                 <tr class="product">
@@ -190,6 +174,8 @@
                                     <td>23.990.000₫</td>
                                     <td>215.910.000đ</td>
                                     <td class="state">9</td>
+                                    <td>✔</td>
+                                    <td></td>
                                     <td style="color: blue; text-decoration: underline;cursor: pointer;" onclick="showAdminOrder()">Xem hóa đơn</td>
                                 </tr>
                                 <tr class="product">
@@ -198,6 +184,8 @@
                                     <td>37.990.000₫</td>
                                     <td>113.970.000đ</td>
                                     <td class="state">3</td>
+                                    <td></td>
+                                    <td>✔</td>
                                     <td style="color: blue; text-decoration: underline;cursor: pointer;" onclick="showAdminOrder()">Xem hóa đơn</td>
                                 </tr>
                             </table>
@@ -234,6 +222,8 @@
                                     <th>Tên sản phẩm</th>
                                     <th>Đơn giá</th>
                                     <th>Tổng tiền</th>
+                                    <th>Bán nhanh nhất</th>
+                                    <th>Bán chậm nhất</th>
                                     <th>Số lượng bán</th>
 
                                 </tr>
@@ -243,14 +233,18 @@
                                     <td>36.990.000₫</td>
                                     <td>139.960.000đ</td>
                                     <td class="state">4</td>
+                                    <td></td>
+                                    <td>✔</td>
                                     <td style="color: blue; text-decoration: underline;cursor: pointer;" onclick="showAdminOrder()">Xem hóa đơn</td>
                                 </tr>
-                                <tr class="prod uct">
+                                <tr class="product">
                                     <td><img style="width: 100px; height: 100px;" src="./img/product/iphone/iphone002.png" alt=""></td>
                                     <td>iPhone 14 Pro 128GB</td>
                                     <td>30.490.000₫</td>
                                     <td>60.980.000đ</td>
                                     <td class="state">2</td>
+                                    <td></td>
+                                    <td>✔</td>
                                     <td style="color: blue; text-decoration: underline;cursor: pointer;" onclick="showAdminOrder()">Xem hóa đơn</td>
                                 </tr>
                                 <tr class="product">
@@ -259,6 +253,8 @@
                                     <td>28.990.000₫</td>
                                     <td>129.950.000đ</td>
                                     <td class="state">5</td>
+                                    <td></td>
+                                    <td>✔</td>
                                     <td style="color: blue; text-decoration: underline;cursor: pointer;" onclick="showAdminOrder()">Xem hóa đơn</td>
                                 </tr>
                             </table>
@@ -295,6 +291,8 @@
                                     <th>Tên sản phẩm</th>
                                     <th>Đơn giá</th>
                                     <th>Tổng tiền</th>
+                                    <th>Bán nhanh nhất</th>
+                                    <th>Bán chậm nhất</th>
                                     <th>Số lượng bán</th>
 
                                 </tr>
@@ -304,6 +302,8 @@
                                     <td>36.990.000₫</td>
                                     <td>139.960.000đ</td>
                                     <td class="state">4</td>
+                                    <td></td>
+                                    <td>✔</td>
                                     <td style="color: blue; text-decoration: underline;cursor: pointer;" onclick="showAdminOrder()">Xem hóa đơn</td>
                                 </tr>
                                 <tr class="product">
@@ -312,6 +312,8 @@
                                     <td>30.490.000₫</td>
                                     <td>60.980.000đ</td>
                                     <td class="state">2</td>
+                                    <td></td>
+                                    <td>✔</td>
                                     <td style="color: blue; text-decoration: underline;cursor: pointer;" onclick="showAdminOrder()">Xem hóa đơn</td>
                                 </tr>
                                 <tr class="product">
@@ -320,6 +322,8 @@
                                     <td>28.990.000₫</td>
                                     <td>129.950.000đ</td>
                                     <td class="state">5</td>
+                                    <td></td>
+                                    <td>✔</td>
                                     <td style="color: blue; text-decoration: underline;cursor: pointer;" onclick="showAdminOrder()">Xem hóa đơn</td>
                                 </tr>
                             </table>
@@ -353,7 +357,7 @@
                             <table style="width: 100%;margin: 40px 0;">
                                 <!--noi dung tieu de-->
                                 <tr class="title">
-                                    <th>Số thứ tự</th>
+                                    <th>STT</th>
                                     <th>Tên Khách Hàng</th>
                                     <th>Địa chỉ</th>
                                     <th>Số Sản Phẩm Đã Mua</th>
@@ -424,7 +428,7 @@
                             <table style="width: 100%;margin: 40px 0;">
                                 <!--noi dung tieu de-->
                                 <tr class="title">
-                                    <th>Số thứ tự</th>
+                                    <th>Mã đơn hàng</th>
                                     <th>Tên Khách Hàng</th>
                                     <th>Địa chỉ</th>
                                     <th>Số Sản Phẩm Đã Mua</th>
@@ -514,7 +518,7 @@
                                     <td style="padding: 15px 0 15px 15px; color: blue; text-decoration: underline;cursor: pointer;" onclick="showDetailBill()">Xem hóa đơn</td>
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">
-                                    <td style="padding: 15px 0 15px 15px;">12</td>
+                                    <td style="padding: 15px 0 15px 15px;">12</a></td>
                                     <td style="padding: 15px 0 15px 15px;">Thanh Điền</td>
                                     <td style="padding: 15px 0 15px 15px;">22/22 Dương Bá Trạc Quận 8 tpHCM</td>
                                     <td style="padding: 15px 0 15px 15px;">2</td>
@@ -657,7 +661,7 @@
                                 </tr>
                                 <tr class="user">
                                     <td><a href=""><img src="./img/logo.png" alt="per3" style="width: 50px;height: 50px;border-radius: 100%;"></a></td>
-                                    <td>Thanh'teacher handsome</td>
+                                    <td>Teacher Thanh hand</td>
                                     <td>thic@gmail.com</td>
                                     <td>099888777</td>
                                     <td>22/02/2002</td>
