--- a/admin.html
+++ b/admin.html
@@ -681,7 +681,7 @@
                                     <th>Ngày sinh</th>
                                 </tr>
                                 <tr class="user">
-                                    <td><a href=""><img src="./img/logo.img" alt="per3" style="width: 50px;height: 50px;border-radius: 100%;"></a></td>
+                                    <td><a href=""><img src="./img/logo.png" alt="per3" style="width: 50px;height: 50px;border-radius: 100%;"></a></td>
                                     <td>Nguyễn Thị C</td>
                                     <td>thic@gmail.com</td>
                                     <td>099888777</td>
