--- a/admin.html
+++ b/admin.html
@@ -360,7 +360,7 @@
                                     <option value="MacBook">MacBook</option>
                                     <option value="AppleWatch">AppleWatch</option>
                                 </select> -->
-                                <span style="font-weight: 700;">top 5 khách hàng mua nhiều nhất</span>
+                                <span style="font-weight: 700;">Top 5 khách hàng mua nhiều nhất</span>
                                 <br>
                                 <div class="date">
                                     <label for="start">Từ ngày: </label>
