--- a/index.html
+++ b/index.html
@@ -495,6 +495,8 @@
                                 <input
                                     type="number"
                                     id="priceFrom"
+                                    min="0"
+                                    step="100000"
                                     style="
                                         width: calc(50% - 5px);
                                         height: 35px;
@@ -510,6 +512,8 @@
                                 <input
                                     type="number"
                                     id="priceTo"
+                                    min="0"
+                                    step="100000"
                                     style="
                                         width: calc(50% - 5px);
                                         height: 35px;
